<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TranslateActivity">
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="58dp"
            android:id="@+id/radioGroup"
            tools:layout_editor_absoluteX="46dp" tools:ignore="MissingConstraints">
        <RadioButton
                android:text="@string/radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton"/>
        <RadioButton
                android:text="@string/radiobutton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2"/>
    </RadioGroup>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/translate"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2" tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="48dp" android:importantForAutofill="no"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp" android:id="@+id/textView2" tools:layout_editor_absoluteY="187dp"
            tools:layout_editor_absoluteX="52dp"/>
    <Button
            android:text="@string/buttonTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2" tools:layout_editor_absoluteY="187dp"
            android:onClick="Translate"
            tools:layout_editor_absoluteX="167dp"/>
</LinearLayout>